--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
     <div id="game">
 
         <div id="begin">
-            <h2>Press A - Z to Start the Game</h2>
+            <h2>Press Any Key to Start the Game</h2>
         </div>
 
         <div>
